fix: fixed problem of overlapping before first article and accordion button

--- a/theme/ItaliaTheme/Views/_common.scss
+++ b/theme/ItaliaTheme/Views/_common.scss
@@ -354,3 +354,11 @@ dl.trasparenza-fields {
     }
   }
 }
+
+// Regole per SideMenu mobile
+.row.row-column-border.row-column-menu-left {
+  position: relative;
+  aside {
+    z-index: 1;
+  }
+}
